--- a/googlemaps/pom.xml
+++ b/googlemaps/pom.xml
@@ -125,7 +125,7 @@
                     </archive>
                 </configuration>
             </plugin>
-<!--             <plugin>
+             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.3</version>
@@ -137,7 +137,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin> -->
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
